RESOLVED FIXED61082
[chromium] Check HUD texture reserve status before using texture
https://bugs.webkit.org/show_bug.cgi?id=61082
Summary [chromium] Check HUD texture reserve status before using texture
Adrienne Walker
Reported 2011-05-18 11:23:53 PDT
[chromium] Check HUD texture reserve status before using texture
Attachments
Patch (1.35 KB, patch)
2011-05-18 11:26 PDT, Adrienne Walker
jamesr: review+
Adrienne Walker
Comment 1 2011-05-18 11:26:23 PDT
Adrienne Walker
Comment 2 2011-05-18 11:27:50 PDT
This is just a strawman patch. Nat, if you think there's something better we can do (create a smaller HUD?) or an error we can report, feel free to change this.
Adrienne Walker
Comment 3 2011-05-18 11:29:26 PDT
Er, edited to say that the reason for this patch is because I was bumping into assertion errors where the hud texture couldn't be protected because it didn't exist. It wasn't being created because it would have pushed texture usage over the memory manager's limit.
James Robinson
Comment 4 2011-05-18 13:29:57 PDT
Might want to add something to the ChangeLog to make it clear that this only changes stuff behind a flag and shouldn't impact users or tests
Adrienne Walker
Comment 5 2011-05-18 14:16:24 PDT
Note You need to log in before you can comment on or make changes to this bug.