2011-05-18  Adrienne Walker  <enne@google.com>

Reviewed by James Robinson.

        [chromium] Check HUD texture reserve status before using texture
        https://bugs.webkit.org/show_bug.cgi?id=61082

        This only changes behavior behind a flag, so shouldn't impact any tests.

        * platform/graphics/chromium/cc/CCHeadsUpDisplay.cpp:
        (WebCore::CCHeadsUpDisplay::draw):

Canonical link: https://commits.webkit.org/76432@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86788 268f45cc-cd09-0410-ab3c-d52691b4dbfc